NIJO-206 fix scrollbar

--- a/styles/gallery.sass
+++ b/styles/gallery.sass
@@ -15,3 +15,29 @@
 .slider
     .slide
         height: 550px
+
+.gallery
+    li.slide
+        background: #fff
+    &__item
+        padding: 5px
+        border: 1px solid #D8DADC
+        border-radius: 4px
+        background: #fff
+    li.thumb
+        border: 1px solid #D8DADC
+        padding: 5px
+        border-radius: 4px
+        background: #fff
+    .thumbs
+        overflow-x: scroll
+        padding-bottom: 12px
+        &::-webkit-scrollbar
+            height: 6px
+        &::-webkit-scrollbar-thumb
+            background: #FAAB19
+            border-radius: 100px
+        &::-webkit-scrollbar-track
+            background: #F4F4F4
+        .control-arrow
+            display: none
